--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyDx72SbvxrukrPo8of-cgLpY31pm8-0ut8"></script>
+
+    <title>Travel Companion</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
